test/error/semantic5/semantic5.bas

/'
  file:     semantic5.bas
  author:   xbenes49
  date:     1st december 2017
  Error test of calling not declared function.
'/

scope
  dim x as integer
  x = f()
end scope
